@@ -1,11 +1,13 @@
-/* $Id: config.h,v 1.6 2012/09/27 15:40:29 nanard Exp $ */
+/* $Id: config.h,v 1.9 2015/08/06 13:16:58 nanard Exp $ */
 /*  MiniUPnP project
  * http://miniupnp.free.fr/ or http://miniupnp.tuxfamily.org/
- * (c) 2006-2011 Thomas Bernard
+ * (c) 2006-2015 Thomas Bernard
  * This software is subject to the conditions detailed
  * in the LICENCE file provided within the distribution */
 #ifndef CONFIG_H_INCLUDED
 #define CONFIG_H_INCLUDED
+
+#define MINISSDPD_VERSION "1.3"
 
 /* use BSD daemon() ? */
 #define USE_DAEMON
