@@ -1,4 +1,7 @@
-$Id: Changelog.txt,v 1.41 2015/07/21 15:39:36 nanard Exp $
+$Id: Changelog.txt,v 1.42 2015/08/06 13:16:58 nanard Exp $
+
+2015/08/06:
+	added command 0 (version)
 
 2015/07/21:
 	set multicast TTL to 2 by default and configurable
